--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,21 +1,23 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  ch_name: MyString
   en_name: MyString
   phone_number: MyString
-  b_day: 2023-05-03 13:58:07
+  b_day: 2023-05-03 14:03:34
   passport_number: MyString
-  passport_date: 2023-05-03 13:58:07
+  passport_date: 2023-05-03 14:03:34
   passport_photo: MyString
   travel_url: MyString
   other: MyString
 
 two:
+  ch_name: MyString
   en_name: MyString
   phone_number: MyString
-  b_day: 2023-05-03 13:58:07
+  b_day: 2023-05-03 14:03:34
   passport_number: MyString
-  passport_date: 2023-05-03 13:58:07
+  passport_date: 2023-05-03 14:03:34
   passport_photo: MyString
   travel_url: MyString
   other: MyString
